more appropriate title

--- a/slides/index.html
+++ b/slides/index.html
@@ -39,14 +39,14 @@
 
       <article>
         <h1>
-          Title Goes Here Up
+          HTML5 Development
           <br>
-          To Two Lines
+           with the Chrome Dev Tools
         </h1>
         <p>
-          Sergey Brin
+          Paul Irish &amp; Boris Smus
           <br>
-          May 10, 2011
+          May 9, 2011
         </p>
       </article>
       
