Added countSheep bug to M* Reordered 4 and 5 in slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -152,9 +152,31 @@
         </p>
       </article>
 
+      <article>
+        <h3>Boris Presents ^^^^</h3>
+        <h3>Paul Presents vvvv</h3>
+      </article>
 
       <article>
-        <h1>PART 4: Breakpoints</h1>
+        <h1>PART 4: Profiling</h1>
+        <ul>
+          <li>Why do it?</li>
+          <li>How to do it in devtools?</li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>Fix it!</h3>
+        <p>
+        Why does clearing TODOs take so long? Find the problem using the
+        debugger and fix it.
+
+        TODO(smus): find a less contrived example.
+        </p>
+      </article>
+
+      <article>
+        <h1>PART 5: Breakpoints</h1>
         <ul>
           <li>Different kinds of breakpoints</li>
           <li>How to do it in devtools?</li>
@@ -181,24 +203,6 @@
         </p>
       </article>
 
-
-      <article>
-        <h1>PART 5: Profiling</h1>
-        <ul>
-          <li>Why do it?</li>
-          <li>How to do it in devtools?</li>
-        </ul>
-      </article>
-
-      <article>
-        <h3>Fix it!</h3>
-        <p>
-        Why does clearing TODOs take so long? Find the problem using the
-        debugger and fix it.
-
-        TODO(smus): find a less contrived example.
-        </p>
-      </article>
 
       <article>
         <h1>PART 6: Finale</h1>
