Tweaks to cheat sheet

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -1,62 +1,73 @@
 <!doctype html>
 <head>
   <title>Chrome Developer Tools Cheat Sheet</title>
+  <style>
+    #html { float: left; }
+    #css { float: left; }
+    #javascript { clear: both; }
+    article span {
+      width: 40px;
+    }
+  </style>
 </head>
-<section id="html">
-<ul>
-  <li>
+
+<body>
+  <section id="html">
+
+  <article>
   <span>Edit DOM attributes inline on the elements tab</span>
-  <img src="img/html/inline-edit.png"/>
-  </li>
-  <li>
+  <img src="images/html-inline-edit.png"/>
+  </article>
+  <article>
   <span>Edit chunks of DOM</span>
-  <img src="img/html/bulk-edit.png"/>
-  </li>
-  <li>
+  <img src="images/html-bulk-edit.png"/>
+  </article>
+  <article>
   <span>Visual selection of DOM elements</span>
-  <img src="img/html/visual-select.png"/>
-  </li>
-</ul>
-</section>
+  <img src="images/html-visual-select.png"/>
+  </article>
 
-<section id="css">
-<ul>
-  <li>
-  <span>Edit CSS styles inline with autocompletion</span>
-  <img src="img/css/inline-edit.png"/>
-  </li>
-  <li>
-  <span>Make new style rules</span>
-  <img src="img/css/new-rule.png"/>
-  </li>
-  <li>
-  <span>Edit the whole CSS stylesheet</span>
-  <img src="img/css/bulk-edit.png"/>
-  </li>
-  <li>
-  <span>CSS stylesheet versioning</span>
-  <img src="img/css/stylesheet-version.png"/>
-  </li>
-</ul>
-</section>
+  </section>
 
-<section id="javascript">
-<ul>
-  <li>
+  <section id="css">
+
+  <article>
   <span>Edit CSS styles inline with autocompletion</span>
-  <img src="img/css/inline-edit.png"/>
-  </li>
-  <li>
+  <img src="images/css-inline-edit.png"/>
+  </article>
+  <article>
   <span>Make new style rules</span>
-  <img src="img/css/new-rule.png"/>
-  </li>
-  <li>
+  <img src="images/css-new-rule.png"/>
+  </article>
+  <article>
   <span>Edit the whole CSS stylesheet</span>
-  <img src="img/css/bulk-edit.png"/>
-  </li>
-  <li>
+  <img src="images/css-bulk-edit.png"/>
+  </article>
+  <article>
   <span>CSS stylesheet versioning</span>
-  <img src="img/css/stylesheet-version.png"/>
-  </li>
-</ul>
-</section>
+  <img src="images/css-stylesheet-version.png"/>
+  </article>
+
+  </section>
+
+  <section id="javascript">
+
+  <article>
+  <span>Edit CSS styles inline with autocompletion</span>
+  <img src="images/js-inline-edit.png"/>
+  </article>
+  <article>
+  <span>Make new style rules</span>
+  <img src="images/css/new-rule.png"/>
+  </article>
+  <article>
+  <span>Edit the whole CSS stylesheet</span>
+  <img src="images/css/bulk-edit.png"/>
+  </article>
+  <article>
+  <span>CSS stylesheet versioning</span>
+  <img src="images/css/stylesheet-version.png"/>
+  </article>
+
+  </section>
+</body>
