--- a/M0/index.html
+++ b/M0/index.html
@@ -9,6 +9,7 @@
     <script src="js/underscore-1.1.6.js"></script>
     <script src="js/backbone-0.3.3.js"></script>
     <script src="js/backbone-localstorage.js"></script>
+    <script src="js/modernizr-1.7.min.js"></script>
     <script src="todos.js"></script>
   </head>
 
@@ -57,6 +58,8 @@
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
           <div class="todo-content"></div>
           <span class="todo-destroy"></span>
+          <!-- TODO: implement position awareness -->
+          <div class="todo-location"></div>
         </div>
         <div class="edit">
           <input class="todo-input" type="text" value="" />
