--- a/M2/index.html
+++ b/M2/index.html
@@ -4,11 +4,13 @@
   <head>
     <title>Backbone Demo: Todos</title>
     <link href="todos.css" media="all" rel="stylesheet" type="text/css"/>
+    <link href='http://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet' type='text/css'>
 
     <script src="js/jquery-1.5.2.js"></script>
     <script src="js/underscore-1.1.6.js"></script>
     <script src="js/backbone-0.3.3.js"></script>
     <script src="js/backbone-localstorage.js"></script>
+    <script src="js/modernizr-1.7.min.js"></script>
     <script src="todos.js"></script>
   </head>
 
@@ -57,6 +59,8 @@
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
           <div class="todo-content"></div>
           <span class="todo-destroy"></span>
+          <!-- TODO: implement position awareness -->
+          <div class="todo-location"></div>
         </div>
         <div class="edit">
           <input class="todo-input" type="text" value="" />
