--- a/slides/index.html
+++ b/slides/index.html
@@ -47,9 +47,11 @@
       <article>
         <h3>Format</h3>
         <ul>
-          <li>Introduce HTML5 feature, demo it, let you build</li>
+          <li>Introduce feature, demo it, let you build</li>
           <li>Interactive lab - ask questions</li>
           <li>We have helpers</li>
+          <li>Course materials: <a href="http://goo.gl/c6kgn">goo.gl/c6kgn</a></li>
+          <li>Six modules</li>
           <li>There is a cheatsheet!</li>
         </ul>
       </article>
@@ -67,10 +69,8 @@
       </article>
 
       <article>
-        <h3>The Todo List <a
-            href="http://goo.gl/c6kgn">goo.gl/c6kgn</a></h3>
+        <h3>The Todo List <a href="http://goo.gl/c6kgn">goo.gl/c6kgn</a></h3>
         <ul>
-          <li>Six modules but don't panic</li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
           <li>Code walkthrough</li>
@@ -258,6 +258,26 @@
         </p>
       </article>
 
+      <article>
+        <h3>Summary</h3>
+        <ul>
+          <li>Best Todo List Ever!</li>
+          <li>Rich Chrome Developer Tools Features</li>
+          <li>Styling, transitions and transforms, feature detection</li>
+          <li>Profiling, breakpoints, awesomeness</li>
+        </ul>
+      </article>
+
+      <article>
+        <h1>Thanks + Free cake!</h1>
+        <ul>
+        <p>
+          Paul Irish @paul_irish
+          <br>
+          Boris Smus @borismus
+        </p>
+        </ul>
+      </article>
     </section>
 
   </body>
