--- a/modules/M5/index.html
+++ b/modules/M5/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Backbone Demo: Todos</title>
     <link href="todos.css" media="all" rel="stylesheet" type="text/css"/>
+    <link href='http://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet' type='text/css'>
 
     <script src="js/jquery-1.5.2.js"></script>
     <script src="js/underscore-1.1.6.js"></script>
