--- a/todo/index.html
+++ b/todo/index.html
@@ -2,15 +2,14 @@
 <html>
 
   <head>
-    <title>Backbone Demo: Todos</title>
+    <title>Chrome Dev Tools Demo: Todos</title>
     <link href="todos.css" media="all" rel="stylesheet" type="text/css"/>
 
     <script src="js/jquery-1.5.2.js"></script>
-    <script src="js/modernizr-1.7.min.js"></script>
-    <script src="js/yepnope.1.0.1-min.js"></script>
     <script src="js/underscore-1.1.6.js"></script>
     <script src="js/backbone-0.3.3.js"></script>
     <script src="js/backbone-localstorage.js"></script>
+    <script src="js/modernizr-1.7.min.js"></script>
     <script src="todos.js"></script>
   </head>
 
@@ -59,6 +58,7 @@
           <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
           <div class="todo-content"></div>
           <span class="todo-destroy"></span>
+          <!-- TODO: implement position awareness -->
           <div class="todo-location"></div>
         </div>
         <div class="edit">
