--- a/slides/index.html
+++ b/slides/index.html
@@ -45,13 +45,21 @@
       </article>
 
       <article>
+        <h3>Logistics</h3>
+        <ul>
+          <li>Use Chrome Developer Channel: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
+          <li>Download course materials: <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></li>
+          <li>Use speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
+        <img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
+        </ul>
+      </article>
+
+      <article>
         <h3>Format</h3>
         <ul>
           <li>Introduce feature, demo it, let you build</li>
           <li>Interactive lab - ask questions</li>
           <li>We have helpers</li>
-          <li>Course materials: <a href="http://goo.gl/c6kgn">goo.gl/c6kgn</a></li>
-          <li>Six modules</li>
           <li>There is a cheatsheet!</li>
         </ul>
       </article>
@@ -69,21 +77,18 @@
       </article>
 
       <article>
-        <h3>The Todo List <a href="http://goo.gl/c6kgn">goo.gl/c6kgn</a></h3>
+        <h3>The Todo List <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></h3>
         <ul>
+          <li>Improve in six parts</li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
-          <li>Code walkthrough</li>
-          <li>Thanks, Jérôme Gravel-Niquet</li>
+          <li>Code walkthrough (thanks Jérôme Gravel-Niquet)</li>
         </ul>
       </article>
 
       <article>
         <h1>PART 1: Styling</h1>
-        <ul>
-          <li>Features of CSS3</li>
-          <li>Interactive overview of inspector CSS3 features</li>
-        </ul>
+        <p>CSS and the Chrome Developer Tools</p>
       </article>
 
       <article>
@@ -155,7 +160,7 @@
       <article>
         <h1>PART 3: Feature detection</h1>
         <ul>
-          <li>Feature detect!</li>
+          <li>Safely add new features</li>
           <li>Polyfills</li>
         </ul>
       </article>
