Updated preamble, linked to useful resources for buildits 1-3

--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,9 @@
         <h1>
           HTML5 Development
           <br>
-           with the Chrome Dev Tools
+          with the Chrome Dev Tools
+          <br>
+          #iobootcamp on twitter
         </h1>
         <p>
           Paul Irish &amp; Boris Smus
@@ -47,10 +49,10 @@
       <article>
         <h3>Logistics</h3>
         <ul>
-          <li>Use Chrome Developer Channel: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
+          <li>Use Chrome Developer Channel or Canary: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
           <li>Download course materials: <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></li>
-          <li>Use speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
-        <img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
+          <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
+          <img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
         </ul>
       </article>
 
@@ -79,6 +81,7 @@
       <article>
         <h3>The Todo List <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></h3>
         <ul>
+          <li>What's in the zip?</li>
           <li>Improve in six parts</li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
@@ -119,6 +122,11 @@
         Use your favorite CSS and the devtools to make your TODO list app look
         awesome
         </p>
+        <ul>
+          <li>CSS3 patterns: <a href="http://css3please.com/">css3please.com</a></li>
+          <li>HSL: <a href="http://mothereffinghsl.com/">mothereffinghsl.com</a></li>
+          <li>Web Fonts: <a href="http://www.google.com/webfonts">http://www.google.com/webfonts</a></li>
+        </ul>
       </article>
 
       <article>
@@ -154,6 +162,10 @@
         <p>
         Retrofit the TODO app with amazing effects whenever the user
         deletes a TODO.
+        <ul>
+          <li>CSS3 Please: <a href="http://css3please.com/">css3please.com</a></li>
+          <li>Transforms: <a href="http://www.westciv.com/tools/transforms/index.html">sandbox</a></li>
+        </ul>
         </p>
       </article>
 
@@ -195,6 +207,10 @@
         the browser supports geolocation. For bonus points, use yepnope to
         load the polyfill if there's no geolocation support.
         </p>
+        <ul>
+          <li>Feature detection: <a href="http://www.modernizr.com/">Modernizr</a></li>
+          <li>Conditional loading: <a href="http://yepnopejs.com/">Yepnope</a></li>
+        </ul>
       </article>
 
       <article>
