--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,7 @@
       </article>
 
       <article>
+          <img src="images/cake.png" style="float:right;"/>
         <h1>
           HTML5 Development
           <br>
@@ -52,7 +53,7 @@
           <li>Use Chrome Developer Channel or Canary: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
           <li>Download course materials: <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></li>
           <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
-          <img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
+          <img src="https://chart.googleapis.com/chart?chs=250x250&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
         </ul>
       </article>
 
