--- a/panache/powpow.html
+++ b/panache/powpow.html
@@ -3,11 +3,10 @@
 
 
 
-
 <style>
-canvas { position: absolute; top: 0; left: 0; z-index: -1;}
-html { position:relative; z-index: -2;} html { background: none;}
+canvas { position: absolute; top: 0; left: 0; z-index: -1;;}
 </style>
+
 
 
 <script>
