--- a/slides/index.html
+++ b/slides/index.html
@@ -85,7 +85,7 @@
           <li>Improve in six parts</li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
-          <li>Code walkthrough <small>(thanks Jérôme Gravel-Niquet)</small></li>
+          <li>Code walkthrough (thanks Jérôme Gravel-Niquet)</li>
         </ul>
       </article>
 
@@ -123,7 +123,7 @@
         awesome
         </p>
         <ul>
-          <li>CSS3 patterns: <a href="http://leaverou.me/css3patterns/">leaverou.me/csspatterns</a></li>
+          <li>CSS3 patterns: <a href="http://css3please.com/">css3please.com</a></li>
           <li>HSL: <a href="http://mothereffinghsl.com/">mothereffinghsl.com</a></li>
           <li>Web Fonts: <a href="http://www.google.com/webfonts">google.com/webfonts</a></li>
         </ul>
@@ -187,7 +187,7 @@
       </article>
 
       <article>
-        <h3>Modernizr and Polyfills</h3>
+        <h3>Mozernizr and Polyfills</h3>
         <ul>
           <li>Compatibility tables: <a
             href="http://caniuse.com/">caniuse.com</a></li>
