--- a/slides/index.html
+++ b/slides/index.html
@@ -11,7 +11,7 @@
 
 <html>
   <head>
-    <title>Google I/O</title>
+    <title>Bootcamp, HTML5 and Dev Tools - Google I/O</title>
 
     <meta charset='utf-8' />
     <script src="slides.js"></script>
