polish on teh slides.

--- a/panache/powpow.html
+++ b/panache/powpow.html
@@ -1,5 +1,6 @@
 <!doctype html><html><meta charset=utf-8><title>Boom boom</title><body><input id="new-todo">
 
+<!-- copy paste in all this ↓ ↓ ↓ ↓ ↓ ↓ code -->
 
 
 
