slides are donez0r

--- a/slides/index.html
+++ b/slides/index.html
@@ -86,7 +86,7 @@
           <li>Improve in six parts</li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
-          <li>Code walkthrough (thanks Jérôme Gravel-Niquet)</li>
+          <li>Code walkthrough <small>(thanks Jérôme Gravel-Niquet)</small></li>
         </ul>
       </article>
 
@@ -124,7 +124,7 @@
         awesome
         </p>
         <ul>
-          <li>CSS3 patterns: <a href="http://css3please.com/">css3please.com</a></li>
+          <li>CSS3 patterns: <a href="http://leaverou.me/css3patterns/">leaverou.me/css3patterns</a></li>
           <li>HSL: <a href="http://mothereffinghsl.com/">mothereffinghsl.com</a></li>
           <li>Web Fonts: <a href="http://www.google.com/webfonts">google.com/webfonts</a></li>
         </ul>
@@ -270,9 +270,9 @@
         <p>Write a conditional statement to add functionality when all the todo items have been checked off.
         </p>
         <pre>
-          // check remaining items in toggle method
-          Todos.remaining().length // active todo items remaining
-          // if it is zero, do something interesting
+// check remaining items in toggle method
+Todos.remaining().length // active todo items remaining
+// if it is zero, do something interesting
         </pre>
       </article>
 
@@ -287,8 +287,9 @@
       <article>
         <h3>Build it!</h3>
         <p>
-        Grab source from powpow.html
+        Grab source from powpow.html and drop into the bottom of your app. 
         </p>
+        <p>Call <code>yay()</code> when there are no more todos.</p>
       </article>
 
       <article>
