--- a/slides/index.html
+++ b/slides/index.html
@@ -54,7 +54,7 @@
         <ul>
           <li>Introduce feature, demo it, let you build</li>
           <li>Interactive lab - ask questions</li>
-          <li>We have helpers</li>
+          <li>We have TAs</li>
           <li>There is a cheatsheet!</li>
         </ul>
       </article>
@@ -75,7 +75,12 @@
         <h3>The Todo List <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></h3>
         <ul>
           <li>What's in the zip?</li>
-          <li>Improve in six parts</li>
+          <li>Improve in six modules
+            <ul>
+              <li>start from <code>todo/index.html</code>
+              <li>Jump to <code>modules/M<em>x</em>/index.html</code> if you fall behind
+            </ul>
+          </li>
           <li>Uses Backbone.js lightweight JS MVC Framework</li>
           <li>Builds on jQuery and Underscore.js</li>
           <li>Code walkthrough <small>(thanks Jérôme Gravel-Niquet)</small></li>
@@ -83,7 +88,7 @@
       </article>
 
       <article>
-        <h1>PART 1: Styling</h1>
+        <h1>MODULE 1: Styling</h1>
         <p>CSS and the Chrome Developer Tools</p>
       </article>
 
@@ -123,7 +128,7 @@
       </article>
 
       <article>
-        <h1>PART 2: Transitions and transforms</h1>
+        <h1>MODULE 2: Transitions and transforms</h1>
         <ul>
           <li>demos</li>
         </ul>
@@ -163,7 +168,7 @@
       </article>
 
       <article>
-        <h1>PART 3: Feature detection</h1>
+        <h1>MODULE 3: Feature detection</h1>
         <ul>
           <li>Safely add new features</li>
           <li>Polyfills</li>
@@ -215,7 +220,7 @@
       </article>
 
       <article>
-        <h1>PART 4: Profiling</h1>
+        <h1>MODULE 4: Profiling</h1>
         <ul>
           <li>Why do it?</li>
           <li>How to do it in devtools?</li>
@@ -233,7 +238,7 @@
       </article>
 
       <article>
-        <h1>PART 5: Breakpoints</h1>
+        <h1>MODULE 5: Breakpoints</h1>
         <ul>
           <li>Different kinds of breakpoints</li>
           <li>How to do it in devtools?</li>
@@ -262,15 +267,18 @@
         <p>Write a conditional statement to add functionality when all the todo items have been checked off.
         </p>
         <pre>
+          
 // check remaining items in toggle method
+
 Todos.remaining().length // active todo items remaining
+
 // if it is zero, do something interesting
         </pre>
       </article>
 
 
       <article>
-        <h1>PART 6: Finale</h1>
+        <h1>MODULE 6: Finale</h1>
         <ul>
           <li>Add a touch more fun</li>
         </ul>
