updated shortlink to materials

--- a/slides/index.html
+++ b/slides/index.html
@@ -51,7 +51,7 @@
         <h3>Logistics</h3>
         <ul>
           <li>Use Chrome Developer Channel or Canary: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
-          <li>Download course materials: <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></li>
+          <li>Download course materials: <a href="http://goo.gl/FFEmd">http://goo.gl/FFEmd</a></li>
           <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
           <img src="https://chart.googleapis.com/chart?chs=250x250&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
         </ul>
@@ -80,7 +80,7 @@
       </article>
 
       <article>
-        <h3>The Todo List <a href="http://goo.gl/jrt7b">http://goo.gl/jrt7b</a></h3>
+        <h3>The Todo List <a href="http://goo.gl/FFEmd">http://goo.gl/FFEmd</a></h3>
         <ul>
           <li>What's in the zip?</li>
           <li>Improve in six parts</li>
