added shortlinks to zip bundle everywhere linked to irc geolocation won't work on file://

--- a/slides/index.html
+++ b/slides/index.html
@@ -42,25 +42,26 @@
       <article>
         <h3>Logistics</h3>
         <ul>
-          <li>Use Chrome Developer Channel or Canary: <a href="http://goo.gl/PcNH">http://goo.gl/PcNH</a></li>
-          <li>Download course materials: <a href="http://goo.gl/FFEmd">http://goo.gl/FFEmd</a></li>
-          <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">http://goo.gl/tzrE0</a></li>
+          <li>Use Chrome Canary or Developer Channel: <a href="http://goo.gl/PcNH">goo.gl/PcNH</a></li>
+          <li>Download course materials: <a href="http://goo.gl/FFEmd">goo.gl/FFEmd</a></li>
+          <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">goo.gl/tzrE0</a></li>
           <img src="https://chart.googleapis.com/chart?chs=250x250&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
         </ul>
       </article>
 
       <article>
-        <h3>Format</h3>
+      <h3>Format <a style="float:right;" href="http://goo.gl/FFEmd">goo.gl/FFEmd</a></h3>
         <ul>
           <li>Introduce feature, demo it, let you build</li>
           <li>Interactive lab - ask questions</li>
-          <li>We have TAs</li>
+          <li>We have awesome TAs</li>
+          <li><code>#html5-dev-tools</code> on freenode: <a href="http://goo.gl/nhPmP">goo.gl/nhPmP</a></li>
           <li>There is a cheatsheet!</li>
         </ul>
       </article>
 
       <article>
-        <h3>What we'll cover</h3>
+        <h3>What we'll cover <a style="float:right;" href="http://goo.gl/FFEmd">goo.gl/FFEmd</a></h3>
         <ul>
           <li>Styling</li>
           <li>Transitions and transforms</li>
@@ -72,7 +73,7 @@
       </article>
 
       <article>
-        <h3>The Todo List <a href="http://goo.gl/FFEmd">http://goo.gl/FFEmd</a></h3>
+        <h3>The Todo List <a style="float:right;" href="http://goo.gl/FFEmd">goo.gl/FFEmd</a></h3>
         <ul>
           <li>What's in the zip?</li>
           <li>Improve in six modules
@@ -129,9 +130,6 @@
 
       <article>
         <h1>MODULE 2: Transitions and transforms</h1>
-        <ul>
-          <li>demos</li>
-        </ul>
       </article>
 
       <article>
@@ -162,7 +160,7 @@
         deletes a todo item.
         <ul>
           <li>CSS3 Please: <a href="http://css3please.com/">css3please.com</a></li>
-          <li>Transforms: <a href="http://www.westciv.com/tools/transforms/index.html">sandbox</a></li>
+          <li>Transforms sandbox: <a href="http://goo.gl/nHUOe">http://goo.gl/nHUOe</a></li>
         </ul>
         </p>
       </article>
@@ -203,13 +201,13 @@
         </p>
         <ul>
           <li>Feature detection: <a href="http://www.modernizr.com/">Modernizr</a></li>
+          <li>Note: geolocation won't work in file:// URLs</li>
+          <code>python -m SimpleHTTPServer</code>
         </ul>
-        
-        <p>For bonus points, use yepnope to load a polyfill if there's no geolocation support.
+        <p>For bonus points, use <a href="http://yepnopejs.com/">yepnope</a> to load a polyfill if there's no geolocation support.
         <ul>
           <li>Examples of polyfills: 
           <a href="https://github.com/Modernizr/Modernizr/wiki/HTML5-Cross-browser-Polyfills">long list</a></li>
-          <li>Conditional polyfill loading: <a href="http://yepnopejs.com/">yepnope</a></li>
         </ul>
       </article>
 
