add boilerplate css to transforms buildit.

--- a/slides/index.html
+++ b/slides/index.html
@@ -246,6 +246,18 @@
           <li>CSS3 Please: <a href="http://css3please.com/">css3please.com</a></li>
           <li>Transforms sandbox: <a href="http://goo.gl/nHUOe">http://goo.gl/nHUOe</a></li>
         </ul>
+        
+         <pre class="lang-css">
+/* see and tweak at the bottom of todos.css */
+
+#todo-list li {
+ -webkit-transition: all 0.001s linear;
+}
+
+#todo-list li.removing {
+ -webkit-transform: scale(1);
+}</pre> 
+         
         </p>
       </article>
 
