--- a/slides/index.html
+++ b/slides/index.html
@@ -228,15 +228,6 @@
          
        </article>
 
-
-      <article>
-        <h3>Transforms Demo</h3>
-        <ul>
-          <li>Demo at <a
-            href="http://css3please.com/">css3please.com</a></li>
-        </ul>
-      </article>
-
       <article>
         <h3>Build it!</h3>
         <p>
@@ -300,17 +291,15 @@
           <li>Note: geolocation won't work in file:// URLs</li>
           <code>python -m SimpleHTTPServer</code>
         </ul>
+      </article>
+
+      <article>
+        <h3>Build it!</h3>
         <p>For bonus points, use <a href="http://yepnopejs.com/">yepnope</a> to load a polyfill if there's no geolocation support.
         <ul>
           <li>Examples of polyfills: 
           <a href="https://github.com/Modernizr/Modernizr/wiki/HTML5-Cross-browser-Polyfills">long list</a></li>
         </ul>
-      </article>
-
-      <article>
-        <br><br><br><br>
-        <h3>Boris Presents ↑↑↑↑</h3>
-        <h3>Paul Presents ↓↓↓↓</h3>
       </article>
 
       <article>
@@ -372,7 +361,7 @@ Todos.remaining().length // active todo items remaining
 
 
       <article>
-        <h1>MODULE 6: Finale</h1>
+        <h1>MODULE 6: Panache</h1>
         <ul>
           <li>Add a touch more fun</li>
         </ul>
