switch borises name to be first.

--- a/slides/index.html
+++ b/slides/index.html
@@ -31,7 +31,7 @@
           with the Chrome Dev Tools
         </h1>
         <p>
-          Paul Irish &amp; Boris Smus
+          Boris Smus &amp; Paul Irish
           <br>
           May 9, 2011
           <br>
