--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
           <br>
           May 9, 2011
           <br>
-          #iobootcamp on twitter
+          #iobootcamp
         </p>
       </article>
 
