--- a/panache/powpow.html
+++ b/panache/powpow.html
@@ -7,11 +7,38 @@
 <style>
 canvas { position: absolute; top: 0; left: 0; z-index: -1;}
 body, html { min-height: 100%; } html { background:none;}
+#todoapp { opacity: 0.8; }
 </style>
 
 
 
 <script>
+
+ // feel free to modify any of these
+ 
+function setupParticle(particle){
+  particle.velX = (Math.random() * 5) + 5 
+  particle.velY = (Math.random() * 5) + 5 
+  particle.drag = 0.9;
+  particle.gravity = 0.1;
+
+  particle.size = 4;
+  particle.shrink = 0.96;
+  particle.fade = 0.01;
+  
+}
+
+
+function yay(){
+  window.yaynabled = true;
+  window.yaytext = 'U WIN!';
+  var elem = document.querySelector('#todoapp');
+  if (elem){
+    elem.style.WebkitTransition = elem.style.OTransition = elem.style.MozTransition = elem.style.msTransition = '1s ease-out';
+    elem.style.WebkitTransform = elem.style.OTransform = elem.style.MozTransform = elem.style.msTransform = 'rotateZ(360deg)';
+  }
+}
+
 
 // screen size variables
 var SCREEN_WIDTH = window.innerWidth,
@@ -27,7 +54,7 @@ var canvas = document.createElement('canvas'),
 
 var particle, particles = [],
     MAX_PARTICLES = 850,
-    count = 0;
+    count = 0, rcount = 0;
 
 
 var input, canvasText, contextText, text = undefined,
@@ -119,14 +146,7 @@ function makeParticle(particleCount, x, y) {
     // create a new particle in the middle of the stage
     var particle = new Particle(x || HALF_WIDTH, y || HALF_HEIGHT);
 
-    particle.velX = (Math.random() * 5) + 5 //Math.sin(angle) * speed; 
-    particle.velY = (Math.random() * 5) + 5 //Math.cos(angle) * speed; 
-    particle.drag = 0.9;
-    particle.gravity = 0.1;
-
-    particle.size = 4;
-    particle.shrink = 0.96;
-    particle.fade = 0.01;
+    setupParticle(particle);
 
     // add it to the array
     particles.push(particle);
@@ -223,9 +243,13 @@ function Particle(posx, posy) {
   };
 
   this.render = function (c) {
-    // set the fill style to have the right alpha
-    c.fillStyle = "hsla(" + ~~ (Math.random() * 360) + "," + 80 + "%,50%," + this.alpha + ")";
-
+    
+    // only change particle color every 10 frames for perf.
+    if (rcount++ % 10 == 0){
+      // random color with 80% saturation and 50% lightness.
+      c.fillStyle = "hsla(" + ~~ (Math.random() * 360) + "," + 80 + "%,50%," + this.alpha + ")";
+    }
+    
     // draw a circle of the required size
     c.beginPath();
     c.arc(this.posX, this.posY, this.size, 0, Math.PI * 2, true);
@@ -244,15 +268,7 @@ function randomRange(min, max) {
   return ((Math.random() * (max - min)) + min);
 }
 
-function yay(){
-  window.yaynabled = true;
-  window.yaytext = 'WINNER!';
-  var elem = document.querySelector('#todoapp');
-  if (elem){
-    elem.style.WebkitTransition = elem.style.OTransition = elem.style.MozTransition = elem.style.msTransition = '1s ease-out';
-    elem.style.WebkitTransform = elem.style.OTransform = elem.style.MozTransform = elem.style.msTransform = 'rotateZ(360deg)';
-  }
-}
+
 
 </script>
 
