enlarged qr code

--- a/slides/index.html
+++ b/slides/index.html
@@ -43,9 +43,9 @@
         <h3>Logistics</h3>
         <ul>
           <li>Use Chrome Canary or Developer Channel: <a href="http://goo.gl/PcNH">goo.gl/PcNH</a></li>
+          <img style="float:right; margin:-20px;" src="https://chart.googleapis.com/chart?chs=450x450&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
           <li>Download course materials: <a href="http://goo.gl/FFEmd">goo.gl/FFEmd</a></li>
           <li>Feedback with speaker meter: <a href="http://goo.gl/tzrE0">goo.gl/tzrE0</a></li>
-          <img src="https://chart.googleapis.com/chart?chs=250x250&cht=qr&chl=www.speakermeter.com/talks/html5-dev-tools/&choe=UTF-8"/>
         </ul>
       </article>
 
